fixed spacing

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ margin-left: 0;
   font-size: 80px;
   text-align: center;
   color: #e85400;
-  margin: 80px 0 80px 0;
+  margin: 30px 0 80px 0;
 }
 
 
@@ -234,7 +234,7 @@ margin-left: 0;
   position: absolute;
   float: left;
   padding: 600px 0 0 220px;
-  width: 80%;
+  width: 90%;
   font-size: 120px;
 }
 
